# cmake_very_basic_example

./: .gitignore  CMakeLists.txt  README.md
extra/: README.md
src/: main.c  module.c  module.h
